# jellyfish

./: .gitignore  CMakeLists.txt  README.md  glowbox.sln  report.md
report/: report.md
shaders/bloom/: frag.glsl  vert.glsl
shaders/copy/: frag.glsl
shaders/framebuffer/: frag.glsl
shaders/jellyfish/: frag.glsl  vert.glsl
shaders/screen/: frag.glsl  vert.glsl
shaders/simple/: frag.glsl  vert.glsl
src/: framebuffer.cpp  framebuffer.h  glutils.hpp  jellyfish.cpp  jellyfish.h  loadshaders.cpp  loadshaders.h  main.cpp  renderer.cpp  renderer.h  vertexarrays.cpp  vertexarrays.h
